알고리즘 수정, 키워드 액티비티 수정, 트레블서머리 액티비티에 알고리즘 반영해서 지도에 마크업띄어주게 수정